# IAEAphsp

./: .gitignore  README.md
G4IAEAphspInterface/: CMakeLists.txt  G4IAEAphspReader.cc  G4IAEAphspReader.hh  G4IAEAphspWriter.cc  G4IAEAphspWriter.hh
iaea_phsp/: Makefile  Makefile_macOS_g++_gfortran
libraries/macOS10.15/clang/: libG4IAEAphspInterface.dylib  libiaea_phsp.dylib
libraries/macOS10.15/gcc10/: libG4IAEAphspInterface.dylib
